Estudo de position e propriedades: postion relative, absolte, fixed e z-index:1;

--- a/css/position.css
+++ b/css/position.css
@@ -9,11 +9,155 @@
     width: 80%;
     min-height: 600px;
     background-color: rgb(129, 193, 237);
+    position: relative;
 }
 
 .box{
     width: 250px;
     height: 250px;
     background-color: #ccc;
+    align-items: center;
     margin: 0 20px;
+    position: absolute;
+    /* top: 50px; */
+    /* left: 100px; */
+    bottom: 0; /*Valor = 0 vai tudo pra baixo valor 1 pra cima*/
+    right: 0; /*Valor = 0 vai tudo pra direita, valor 1 pra esquerda */
+}
+
+.menu{
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+    background-color: #dc143c;
+    color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.container-1{
+    margin: 150px auto;
+    width: 80%;
+    min-height: 600px;
+    background-color: rgb(129, 193, 237);
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.box-1{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #20006b;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    position: relative;
+}
+.box-2{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #2f1175;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 2;
+    position: relative;
+    top: -30px;
+    left: 60px;
+    
+}
+.box-3{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #441927;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    position: relative;
+    left: 90px;
+    top: -60px;
+}
+
+.container-2{
+    margin: 150px auto;
+    width: 80%;
+    min-height: 600px;
+    background-color: rgb(129, 193, 237);
+    display: flex;
+    position: relative;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+
+.box-11{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #20006b;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    position: relative;
+}
+.box-22{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #20006baf;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    position: relative;
+    left: 100px;
+}
+.box-33{
+    width: 250px;
+    height: 150px;
+    font-size: 110px;
+    background-color: #441927;
+    border-radius: 9px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    position: relative;
+    left: 200px;
+}
+
+.p{
+    margin: 10px;
+    padding: 10px;
+}
+
+#botoes{
+    text-decoration: none;
+    margin: 10px;
+    padding: 2px;
+    border: 2px solid black;
+    color: white;
+    background-color: blueviolet;
+    float: left;
 }
